# Penal_Code_Article_Summarizer

./: Code  JupyterNotebook  README.md  code.ipynb  pyproject.toml  summaries_keywords.csv
.devcontainer/: devcontainer.json  packages.txt
notebooks/: Summarizer.ipynb
scripts/: scrape-links.py
