[tool.poetry]
name = "lawsummarizer"
version = "0.1.0"
description = ""
authors = ["Frédéric <Fcelerse@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
unsloth = {git = "https://github.com/unslothai/unsloth.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
